syntax = "proto3";

package team;

// Define the TeamService
service TeamService {
  rpc GetTeamByUser (GetTeamRequest) returns (GetTeamResponse);
}

// Request message to fetch a user's team
message GetTeamRequest {
  string user_id = 1;
}

// Response message containing the team details
message GetTeamResponse {
  repeated teamRes teams = 1;
  repeated otherTeam otherTeamsWithDetails = 2;
}

message teamRes {
  string teamName = 1;
  string user_id = 2;
  string email = 3;
  string phoneNumber = 4;
  int32 noOfPlayers = 5;
  int32 substitute = 6;
  string homeGround = 7;
  string addressOfGround = 8;
  string pinCode = 9;
  string logo = 10;
  string games = 11;
  string description = 12;
  int32 members = 14;
  repeated string joinTeam = 15;
}

message otherTeam {
  int32 status = 1;
  int32 members = 2;
}
